# WatermelonDB

./: Collection相关说明.doc  C部分接口说明.xlsx  Query类核心方法分析.docx  Relation类核心方法分析.docx  database和localStorage类核心方法.docx  database类核心方法.docx  package-lock.json  package.json
examples/: index.js  package.json
examples/harmony/: build-profile.json5
examples/harmony/entry/: oh-package.json5
examples/src/: MainPage.js
examples/src/WaterDatabase/models/: database.js  index.js  schema.js
examples/src/WaterLocalStorage/: index.js
examples/src/WatermelonDB2/: index.js
examples/src/WatermelonDBCollectionMap/: index.js
examples/src/WatermelonDBCollectionMap/models/: schema.js
examples/src/WatermelonDBComplex/: index.js
examples/src/WatermelonDBFetchTest/: FetchTestScreen.js  index.js
examples/src/WatermelonDBModelTest/: index.js  mockdata.js  output.md  test.md
examples/src/WatermelonDBQuery/: WatermelonQueryTest.js  index.js
examples/src/WatermelonDBQueryTest/: FetchTestScreen.js  ObserveMethodTest.js  QueryMetadataTest.js  database.js  index.js
examples/src/WatermelonDBSimple/: index.js
examples/src/WatermelonDBSimplejsiTure/: index.js
examples/src/WatermerlonDBRelation/: index.js
examples/src/schemaTests/: SchemaTestScreen.js
harmony/: watermelondb.har
harmony/watermelondb/: BuildProfile.ets  Index.ets  oh-package-lock.json5  oh-package.json5
harmony/watermelondb/src/main/cpp/: CMakeLists.txt  RNWMDatabaseJSIBridge.cpp  WatermelondbPackage.h
scripts/: pack-harmony.mjs
src/specs/: NativeWMDatabaseBridge.ts  NativeWMDatabaseJSIBridge.ts
(+18 files in other folders)
